openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-detection-prod
  labels:
    app.kubernetes.io/part-of: fraud-detection-platform
