openshift/06-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-prod
  namespace: fraud-detection-prod
  labels:
    app.kubernetes.io/part-of: fraud-detection-platform
    app: postgres-prod
spec:
  selector:
    app: postgres-prod
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
