openshift/10-schema-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: fraud-detection-prod
  labels:
    app.kubernetes.io/part-of: fraud-detection-platform
    app: schema-registry
spec:
  selector:
    app: schema-registry
  ports:
    - name: schema-registry
      port: 8081
      targetPort: 8081
  type: ClusterIP
